--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lynx-node",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "node addon for lynx language",
   "main": "index.node",
   "scripts": {
@@ -10,7 +10,7 @@
     "install": "npm run build-release",
     "test": "cargo test"
   },
-  "author": "",
+  "author": "linc2046",
   "license": "MIT",
   "devDependencies": {
     "cargo-cp-artifact": "^0.1"
